<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Splash">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/convergence"
        android:text="@string/gastos_sales"
        android:textColor="#FFC727"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6478"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_logo" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/sign_in"
        app:layout_constraintStart_toStartOf="@+id/sign_in" />

    <com.simform.customcomponent.SSCustomEdittextOutlinedBorder
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="phone"
        android:inputType="phone"
        app:custom_component_border_color="@color/light_yellow"
        app:custom_component_border_error_color="@color/light_yellow_light"
        app:custom_component_editText_bg_color="@android:color/white"
        app:custom_component_editText_hint="@string/Phonenumber"
        app:custom_component_error_text_bg_color="@android:color/white"
        app:custom_component_title="@string/Phonenumber"
        app:custom_component_title_bg_color="@color/white"
        app:custom_component_title_color="@color/light_yellow"
        app:custom_component_title_error_color="@color/light_yellow_light"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6478" />

    <com.simform.customcomponent.SSCustomEdittextOutlinedBorder
        android:id="@+id/sales_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="username"
        android:inputType="textNoSuggestions"
        app:custom_component_border_color="@color/light_yellow"
        app:custom_component_border_error_color="@color/light_yellow_light"
        app:custom_component_editText_bg_color="@android:color/white"
        app:custom_component_editText_hint="@string/sales_type"
        app:custom_component_error_text_bg_color="@android:color/white"
        app:custom_component_title="@string/sales_type"
        app:custom_component_title_bg_color="@color/white"
        app:custom_component_title_color="@color/light_yellow"
        app:custom_component_title_error_color="@color/light_yellow_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <LinearLayout
        android:id="@+id/sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_card_white"
        android:backgroundTint="@color/total_pro_color"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/ic_sms" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksand_bold"
            android:padding="10dp"
            android:text="Send OTP"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <ImageView
        android:id="@+id/p_back"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_card_white"
        android:backgroundTint="@color/light_yellow_light"
        android:contentDescription="@string/image"
        android:padding="15dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:srcCompat="@drawable/ic_back"
        />

    <com.chaos.view.PinView
        android:id="@+id/pin_view"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:cursorVisible="true"
        android:inputType="number"
        android:itemBackground="#65EAEAEA"
        android:visibility="gone"
        app:cursorColor="@color/black"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="50dp"
        app:itemRadius="5dp"
        app:itemWidth="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineColor="@color/light_yellow"
        app:lineWidth="1dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/grey_600"
        android:fontFamily="@font/fredokaregular"
        android:textSize="11dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/sign_in"
        app:layout_constraintStart_toStartOf="@+id/sign_in" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/grey_600"
        android:fontFamily="@font/fredokaregular"
        android:text="@string/didn_t_you_receive_any_code"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/pin_view"
        app:layout_constraintStart_toStartOf="@+id/pin_view"
        app:layout_constraintTop_toBottomOf="@+id/pin_view" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="12dp"
        android:visibility="gone"
        android:text="@string/resend_new_code"
        android:textColor="@color/light_yellow"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

</androidx.constraintlayout.widget.ConstraintLayout>